# fastapi_full_learning

./: .test.env  README.md  config.py  main.py  pyproject.toml  pytest.ini  test.py
auth/: auth.py  database.py  manager.py
migrations/: env.py
migrations/versions/: 1bc0e5aeb1a7_initial.py  1fdf6369ab40_add_operation.py  2024-06-05_74055c61826d_add_fixed_operation.py  2024-06-20_107b2d5989ff_initial.py  6502d2470eb0_initial.py  6786b82d9bac_database_creation.py  f0ba0f82c96b_database_creation.py
models/: models.py
src/: config.py  database.py  main.py
src/auth/: base_config.py  manager.py  models.py  schemas.py
src/operations/: models.py  router.py
src/tasks/: router.py  tasks.py
tests/: conftest.py  test_auth.py
