[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Vladislav Glukhovskiy <vlad.gluhovskiy_18376@mail.ru>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
